test/cli/test-generating-policy/clone/generate-secrets/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test
policies:
- policy.yaml
resources:
- resource.yaml
context: context.yaml
results:
- generatedResource: generated-resources.yaml
  isGeneratingPolicy: true
  kind: Namespace
  policy: generate-secrets
  resources:
  - test-ns
  result: pass
